# MINI_OS-

./: CMakeLists.txt  README.md  build.bat
include/: DataStore.h  Models.h  OS.h  Utilities.h
src/: OS.cpp  Utils.cpp  main.cpp
